# LiquidityRadar2

./: .replit  README.md  ai_utils.py  app.py  data.py  prompts.py  pyproject.toml  redis_cache.py  replit.md  visualizations.py
.streamlit/: config.toml
assets/: style.css
attached_assets/: Pasted--AQUAMIND-AI-AGENT-st-markdown-st-header-AquaMin-1760516331920_1760516331921.txt  Pasted--Visualization-Functions-for-Smart-Liquidity-Monitor-Chart-and-plot-generation-utilities-imp-1760548667790_1760548667791.txt  Pasted-2-Liquidity-Projection-Time-Series-Forecasting-For-forecasting-we-ll-use-a-simple-but-powerful-A-1760465147251_1760465147251.txt  Pasted-3-Concrete-code-change-Add-a-simple-AI-Agent-Goal-Add-a-Liquidity-Advisor-Agent-that-accepts-a-1760470620658_1760470620658.txt  Pasted-None-selected-Skip-to-content-Using-Gmail-with-screen-readers-1-of-27-426-Fwd-file-Inbo-1760461982427_1760461982428.txt  Pasted-Replace-the-entire-PREDICTIVE-EARLY-WARNING-section-of-your-code-with-this-block-Python--1760464762492_1760464762493.txt
attached_assets/extracted/: .replit  README_UPDATED.md  ai_utils.py  app.py  app_backups_app.py  data.py  prompts.py  pyproject.toml  redis_cache.py  replit.md
attached_assets/extracted/.streamlit/: config.toml  secrets.toml
attached_assets/extracted/assets/: preferences.json  sci_fi_header_lottie.json  style.css
attached_assets/extracted/pages/: 1_Overview.py  2_Risk_Analysis.py  3_AI_Insights.py  4_Stress_Test.py  5_Reports.py  (+1 more)
pages/: 1_Overview.py  2_Risk_Analysis.py  3_AI_Insights.py  4_Stress_Test.py  5_Reports.py  6_Settings.py
